<resources>
    <string name="app_name">GPS4PETS</string>
    <string name="label_server">Server</string>
    <string name="label_info">This screen will be shown only once. After you click the button, server address will be saved in preferences. To change it, clear app data from application manager.</string>
    <string name="button_start">Start</string>
    <string name="error_connection">Server connection failed</string>
    <string name="file_browser">File Browser</string>
    <string name="notification_channel">Default</string>
    <string name="permission_location_rationale">App requires location permission to show current location on the map</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_cancel">Use account password</string>
    <string name="server_url">https://track.gps4pets.de</string>
</resources>
