<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_normal"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/label_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/field_server"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/label_server" />

    <EditText
        android:id="@+id/field_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_toEndOf="@+id/label_server"
        android:autofillHints="@string/server_url"
        android:hint="@string/server_url"
        android:inputType="text"
        android:text="@string/server_url" />

    <TextView
        android:id="@+id/label_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_server"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center_horizontal"
        android:text="@string/label_info" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_normal"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:text="@string/button_start" />

</RelativeLayout>
